test/expected/declare_fiiv_v.out
declare f as function (x as int, y as int, void) returning void
                                           ^
44: error: "void" must be only parameter if specified
